[package]
name = "dumbbit"
version = "0.1.0"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
tide = "0.14.0"
anyhow = "1.0.34"
